WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98104
Week specifiers defined in DateTimeFormat class are wrong.
https://bugs.webkit.org/show_bug.cgi?id=98104
Summary
Week specifiers defined in DateTimeFormat class are wrong.
yosin
Reported
2012-10-01 19:01:43 PDT
Week of year and week of month must be: week of year = 'w' (lower case'w') week of month = 'W' (upper case 'W')
Attachments
Patch 1
(4.14 KB, patch)
2012-10-01 19:29 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2012-10-01 19:29:51 PDT
Created
attachment 166591
[details]
Patch 1
yosin
Comment 2
2012-10-01 19:30:40 PDT
Comment on
attachment 166591
[details]
Patch 1 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 3
2012-10-01 20:21:46 PDT
Comment on
attachment 166591
[details]
Patch 1 ok
yosin
Comment 4
2012-10-01 21:22:38 PDT
Comment on
attachment 166591
[details]
Patch 1 Clearing flags on attachment: 166591 Committed
r130116
: <
http://trac.webkit.org/changeset/130116
>
yosin
Comment 5
2012-10-01 21:22:42 PDT
All reviewed patches have been landed. Closing bug.
Ojan Vafai
Comment 6
2012-10-01 23:16:30 PDT
This caused two webkit_unit_test failures. Maybe the tests need updating?
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#testType=webkit_unit_tests&tests=DateTimeFormatTest.SingleUpperCaseCharacter%2CDateTimeFormatTest.SingleLowerCaseCharacter
yosin
Comment 7
2012-10-01 23:20:01 PDT
(In reply to
comment #6
)
> This caused two webkit_unit_test failures. Maybe the tests need updating? > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#testType=webkit_unit_tests&tests=DateTimeFormatTest.SingleUpperCaseCharacter%2CDateTimeFormatTest.SingleLowerCaseCharacter
Yes, I field a
bug 98120
, for updating tests.
Darin Adler
Comment 8
2012-10-02 09:22:40 PDT
Comment on
attachment 166591
[details]
Patch 1 View in context:
https://bugs.webkit.org/attachment.cgi?id=166591&action=review
> Source/WebCore/ChangeLog:12 > + No new tests. Following existing tests cover this change:
Why no new tests? Is this really not a testable change?
yosin
Comment 9
2012-10-02 19:03:23 PDT
(In reply to
comment #8
)
> (From update of
attachment 166591
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=166591&action=review
> > > Source/WebCore/ChangeLog:12 > > + No new tests. Following existing tests cover this change: > > Why no new tests? Is this really not a testable change?
This is testable change. There are layoyut tests listed in ChangeLog and webkit_unit_tests, sorry I forgot to include this in this patch, in
bug 98120
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug