Week specifiers defined in DateTimeFormat class are wrong. https://bugs.webkit.org/show_bug.cgi?id=98104

Reviewed by Kent Tamura.

This patch changes week of year and week of month format specifiers
defined in DateTimeFormat class to match with Unicode technical
standard 35, LDML, Locale Data Markup Language, (http://www.unicode.org/reports/tr35/).

No new tests. Following existing tests cover this change:
  - fast/forms/month-multiple-fields/month-multiple-fields-appearance-basic.html
  - fast/forms/month-multiple-fields/month-multiple-fields-appearance-pseudo-classes.html
  - fast/forms/month-multiple-fields/month-multiple-fields-appearance-pseudo-elements.html
  - fast/forms/month-multiple-fields/month-multiple-fields-appearance-style.html

* html/WeekInputType.cpp:
(WebCore::WeekInputType::setupLayoutParameters): Changed to use 'w' instead of 'W'.
* platform/text/DateTimeFormat.cpp: Changed elements in lowerCaseToFieldTypeMap and upperCaseToFieldTypeMap.
* platform/text/DateTimeFormat.h: Changed FieldTypeWeekOfMonth to 'W' and FieldTypeWeekOfYear to 'w'.

Canonical link: https://commits.webkit.org/116117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130116 268f45cc-cd09-0410-ab3c-d52691b4dbfc